# fubini-visualized

./: .gitignore  Makefile  main.py  manim.cfg  pyproject.toml  tex_template.tex
.portfoliodb/: description.md
